--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
 {
-  "name": "tic-tac-toe",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "My webpack project",
+  "name": "my-webpack-project",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
-    "build": "webpack"
+    "serve": "webpack serve"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Chandrika1302/Tic-Tac-Toe.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Chandrika1302/Tic-Tac-Toe/issues"
-  },
-  "homepage": "https://github.com/Chandrika1302/Tic-Tac-Toe#readme",
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.5.3",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.3"
   }
 }
