--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@webpack-cli/generators": "^1.1.0",
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
     "prettier": "^2.6.2",
